[gd_scene load_steps=51 format=2]

[ext_resource path="res://my game assests/enemy/bosses/Old_Golem/Old_Golem_hit.png" type="Texture" id=1]
[ext_resource path="res://my game assests/enemy/bosses/Old_Golem/Old_Golem_idle.png" type="Texture" id=2]
[ext_resource path="res://my game assests/enemy/bosses/Old_Golem/Old_Golem_death.png" type="Texture" id=3]
[ext_resource path="res://my game assests/enemy/bosses/Old_Golem/Old_Golem_attack.png" type="Texture" id=4]
[ext_resource path="res://my game assests/enemy/bosses/Old_Golem/Old_Golem_walk.png" type="Texture" id=5]
[ext_resource path="res://woodgolem.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 160, 160, 160 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 320, 160, 160 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 480, 160, 160 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 0, 640, 160, 160 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 800, 160, 160 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 960, 160, 160 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 1120, 160, 160 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 160, 160, 160 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 0, 320, 160, 160 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 0, 480, 160, 160 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 0, 640, 160, 160 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 0, 800, 160, 160 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 0, 960, 160, 160 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 0, 1120, 160, 160 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 0, 1280, 160, 160 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 0, 1440, 160, 160 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 0, 160, 160, 160 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 0, 320, 160, 160 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 0, 480, 160, 160 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 0, 160, 160, 160 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 0, 320, 160, 160 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 0, 480, 160, 160 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 0, 640, 160, 160 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 0, 800, 160, 160 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 0, 160, 160, 160 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 0, 320, 160, 160 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 5 )
region = Rect2( 0, 480, 160, 160 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 5 )
region = Rect2( 0, 640, 160, 160 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 5 )
region = Rect2( 0, 800, 160, 160 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 5 )
region = Rect2( 0, 960, 160, 160 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 5 )
region = Rect2( 0, 1120, 160, 160 )

[sub_resource type="SpriteFrames" id=37]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Attack",
"speed": 9.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "Hurt",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "Run",
"speed": 7.0
} ]

[sub_resource type="CircleShape2D" id=38]
radius = 74.2428

[sub_resource type="CircleShape2D" id=39]
radius = 73.2462

[sub_resource type="CircleShape2D" id=40]
radius = 234.214

[sub_resource type="CircleShape2D" id=41]
radius = 75.3127

[sub_resource type="BitmapFont" id=42]

[sub_resource type="StyleBoxFlat" id=43]
bg_color = Color( 0.247059, 0.980392, 0.0117647, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id=44]
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="woodgolem" type="KinematicBody2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.500002, -2.86102e-06 )
scale = Vector2( 1.55833, 1.51667 )
frames = SubResource( 37 )
animation = "Attack"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 38 )

[node name="Hurtbox" type="Area2D" parent="."]
modulate = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
modulate = Color( 0.0392157, 0.0392157, 0.0431373, 1 )
shape = SubResource( 39 )

[node name="Detector" type="Area2D" parent="." groups=["Detector"]]
modulate = Color( 0.972549, 0.627451, 0.0313726, 1 )
collision_layer = 32
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource( 40 )

[node name="AttackDetector" type="Area2D" parent="." groups=["Detector"]]
modulate = Color( 0.0235294, 0.0588235, 0.92549, 1 )
collision_layer = 16
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
shape = SubResource( 41 )

[node name="AttackTimer" type="Timer" parent="AttackDetector"]

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -22.0
margin_top = -81.0
margin_right = 31.0
margin_bottom = -76.0
custom_fonts/font = SubResource( 42 )
custom_styles/fg = SubResource( 43 )
custom_styles/bg = SubResource( 44 )
max_value = 10.0
step = 1.0
value = 10.0
rounded = true
percent_visible = false

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Detector" to="." method="_on_Detector_area_entered"]
[connection signal="area_exited" from="Detector" to="." method="_on_Detector_area_exited"]
[connection signal="area_entered" from="AttackDetector" to="." method="_on_AttackDetector_area_entered"]
[connection signal="area_exited" from="AttackDetector" to="." method="_on_AttackDetector_area_exited"]
[connection signal="timeout" from="AttackDetector/AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
